--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
+    "@mdi/js": "^5.6.55",
     "node-gyp": "^7.1.0",
     "nuxt": "^2.14.5",
     "vue-responsive-components": "^0.2.3",
